# JetBrainsLxgwNerdMono

./: .gitignore  Dockerfile  README.md  README_zh.md  build.py  config.yaml  pyproject.toml  split.py  verify-2-1-split.html  verify-2-1.html
src/: __init__.py  config.py  merge.py  utils.py
