[project]
name = "jetbrains-lxgw-nerd-mono"
version = "1.0.0"
description = "JetBrains Mono + LXGW WenKai Mono + NerdFont - 2:1 CJK monospace font"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fonttools>=4.47.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
